# tiny-cup-sim

./: .gitignore  Cargo.toml  Config.toml  README.md  dimensions.toml  robots.json
src/: dimensions.rs  field.rs  field_state.rs  image_generate.rs  image_generator.rs  main.rs  parser.rs  robots.rs  sim_camera.rs  sim_field.rs  ui.rs  ui_node.rs
src/field/: ball.rs  dynamic.rs  field.rs  goal.rs  robot.rs
src/image_generator/: ball.rs  field.rs  goal.rs  robot.rs
src/parser/: configuration.rs  dimensions.rs  robot_init.rs
src/sim_camera/: sim_camera_node.rs
src/sim_field/: ball.rs  field.rs  field_node.rs  field_representations.rs  robot.rs  team.rs
src/sim_field/field_representations/: ball.rs  field.rs  robot.rs
src/ui/: ui_node.rs
