[package]
name = "tiny-cup-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui_extras = "0.22.0"
image = "0.24.6"
ncomm = "0.1.2"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.96"
tiny-cup-ref = "0.1.0"
toml = "0.7.4"
